# palette-pilot

./: .gitignore  README.md
src/backend/: main.py  pyproject.toml  streamlit_app.py
src/backend/routes/: colorize.py
src/backend/schemas/: colorize.py
src/backend/services/: image_io.py  palette.py  preprocess.py  recolor.py
